--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   </head>
 
   <body>
-    <p>!</p>
+    <main id="app">
+      <nf-app></nf-app>
+    </main>
 
-    <script src="./a1.js"></script>
-    <script src="./a2.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
